# manyfile

./: .clang-format  CMakeLists.txt  README.md
manyfile/: manyfile.cpp
manyfile/cmake/: config.hpp.in
manyfile/include/: argument.hpp  files.hpp  full.hpp  line.hpp
manyfile/source/: files.cpp  full.cpp  line.cpp
